--- a/266690879767.html
+++ b/266690879767.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/266690879767-delete.html" method="get">	 
+<form action="../ru/266690879767-delete.html" method="get">	 
 
 
 		 
