--- a/360190534099.html
+++ b/360190534099.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/360190534099-delete.html" method="get">	 
+<form action="../ru/360190534099-delete.html" method="get">	 
 
 
 		 
