--- a/471916889574.html
+++ b/471916889574.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/471916889574-delete.html" method="get">	 
+<form action="../ru/471916889574-delete.html" method="get">	 
 
 
 		 
