--- a/511198261136.html
+++ b/511198261136.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/511198261136-delete.html" method="get">	 
+<form action="../ru/511198261136-delete.html" method="get">	 
 
 
 		 
