--- a/511752689542.html
+++ b/511752689542.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/511752689542-delete.html" method="get">	 
+<form action="../ru/511752689542-delete.html" method="get">	 
 
 
 		 
