--- a/514447170456.html
+++ b/514447170456.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/514447170456-delete.html" method="get">	 
+<form action="../ru/514447170456-delete.html" method="get">	 
 
 
 		 
