--- a/514731733907.html
+++ b/514731733907.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/514731733907-delete.html" method="get">	 
+<form action="../ru/514731733907-delete.html" method="get">	 
 
 
 		 
