--- a/517697145952.html
+++ b/517697145952.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/517697145952-delete.html" method="get">	 
+<form action="../ru/517697145952-delete.html" method="get">	 
 
 
 		 
