--- a/517939176368.html
+++ b/517939176368.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/517939176368-delete.html" method="get">	 
+<form action="../ru/517939176368-delete.html" method="get">	 
 
 
 		 
