--- a/521864069452.html
+++ b/521864069452.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/521864069452-delete.html" method="get">	 
+<form action="../ru/521864069452-delete.html" method="get">	 
 
 
 		 
