--- a/523093858132.html
+++ b/523093858132.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/523093858132-delete.html" method="get">	 
+<form action="../ru/523093858132-delete.html" method="get">	 
 
 
 		 
