--- a/540016721930.html
+++ b/540016721930.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/540016721930-delete.html" method="get">	 
+<form action="../ru/540016721930-delete.html" method="get">	 
 
 
 		 
