--- a/548151646166.html
+++ b/548151646166.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/548151646166-delete.html" method="get">	 
+<form action="../ru/548151646166-delete.html" method="get">	 
 
 
 		 
