--- a/549700784935.html
+++ b/549700784935.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/549700784935-delete.html" method="get">	 
+<form action="../ru/549700784935-delete.html" method="get">	 
 
 
 		 
