--- a/550017613040.html
+++ b/550017613040.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/550017613040-delete.html" method="get">	 
+<form action="../ru/550017613040-delete.html" method="get">	 
 
 
 		 
