--- a/554030593135.html
+++ b/554030593135.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/554030593135-delete.html" method="get">	 
+<form action="../ru/554030593135-delete.html" method="get">	 
 
 
 		 
