--- a/556989737056.html
+++ b/556989737056.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/556989737056-delete.html" method="get">	 
+<form action="../ru/556989737056-delete.html" method="get">	 
 
 
 		 
