--- a/557015686624.html
+++ b/557015686624.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/557015686624-delete.html" method="get">	 
+<form action="../ru/557015686624-delete.html" method="get">	 
 
 
 		 
