--- a/557328065601.html
+++ b/557328065601.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/557328065601-delete.html" method="get">	 
+<form action="../ru/557328065601-delete.html" method="get">	 
 
 
 		 
