--- a/559075892892.html
+++ b/559075892892.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/559075892892-delete.html" method="get">	 
+<form action="../ru/559075892892-delete.html" method="get">	 
 
 
 		 
