--- a/559791744481.html
+++ b/559791744481.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/559791744481-delete.html" method="get">	 
+<form action="../ru/559791744481-delete.html" method="get">	 
 
 
 		 
