--- a/565270483117.html
+++ b/565270483117.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/565270483117-delete.html" method="get">	 
+<form action="../ru/565270483117-delete.html" method="get">	 
 
 
 		 
