--- a/565983770227.html
+++ b/565983770227.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/565983770227-delete.html" method="get">	 
+<form action="../ru/565983770227-delete.html" method="get">	 
 
 
 		 
