--- a/271500806347.html
+++ b/271500806347.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/271500806347-delete.html" method="get">	 
+<form action="../ru/271500806347-delete.html" method="get">	 
 
 
 		 
