--- a/272764074159.html
+++ b/272764074159.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/272764074159-delete.html" method="get">	 
+<form action="../ru/272764074159-delete.html" method="get">	 
 
 
 		 
