--- a/354633962473.html
+++ b/354633962473.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/354633962473-delete.html" method="get">	 
+<form action="../ru/354633962473-delete.html" method="get">	 
 
 
 		 
