--- a/442066370380.html
+++ b/442066370380.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/442066370380-delete.html" method="get">	 
+<form action="../ru/442066370380-delete.html" method="get">	 
 
 
 		 
