--- a/448254487247.html
+++ b/448254487247.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/448254487247-delete.html" method="get">	 
+<form action="../ru/448254487247-delete.html" method="get">	 
 
 
 		 
