--- a/469932480091.html
+++ b/469932480091.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/469932480091-delete.html" method="get">	 
+<form action="../ru/469932480091-delete.html" method="get">	 
 
 
 		 
