--- a/493183670483.html
+++ b/493183670483.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/493183670483-delete.html" method="get">	 
+<form action="../ru/493183670483-delete.html" method="get">	 
 
 
 		 
