--- a/510817600700.html
+++ b/510817600700.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/510817600700-delete.html" method="get">	 
+<form action="../ru/510817600700-delete.html" method="get">	 
 
 
 		 
