--- a/514439777936.html
+++ b/514439777936.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/514439777936-delete.html" method="get">	 
+<form action="../ru/514439777936-delete.html" method="get">	 
 
 
 		 
