--- a/515501864587.html
+++ b/515501864587.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/515501864587-delete.html" method="get">	 
+<form action="../ru/515501864587-delete.html" method="get">	 
 
 
 		 
