--- a/519446384900.html
+++ b/519446384900.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/519446384900-delete.html" method="get">	 
+<form action="../ru/519446384900-delete.html" method="get">	 
 
 
 		 
