--- a/519614013953.html
+++ b/519614013953.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/519614013953-delete.html" method="get">	 
+<form action="../ru/519614013953-delete.html" method="get">	 
 
 
 		 
