--- a/523311915380.html
+++ b/523311915380.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/523311915380-delete.html" method="get">	 
+<form action="../ru/523311915380-delete.html" method="get">	 
 
 
 		 
