--- a/525309284812.html
+++ b/525309284812.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/525309284812-delete.html" method="get">	 
+<form action="../ru/525309284812-delete.html" method="get">	 
 
 
 		 
