--- a/539489904525.html
+++ b/539489904525.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/539489904525-delete.html" method="get">	 
+<form action="../ru/539489904525-delete.html" method="get">	 
 
 
 		 
