--- a/556329297108.html
+++ b/556329297108.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/556329297108-delete.html" method="get">	 
+<form action="../ru/556329297108-delete.html" method="get">	 
 
 
 		 
