--- a/557865201048.html
+++ b/557865201048.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/557865201048-delete.html" method="get">	 
+<form action="../ru/557865201048-delete.html" method="get">	 
 
 
 		 
