--- a/559931455520.html
+++ b/559931455520.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/559931455520-delete.html" method="get">	 
+<form action="../ru/559931455520-delete.html" method="get">	 
 
 
 		 
