--- a/563723381741.html
+++ b/563723381741.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/563723381741-delete.html" method="get">	 
+<form action="../ru/563723381741-delete.html" method="get">	 
 
 
 		 
