--- a/567445483875.html
+++ b/567445483875.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/567445483875-delete.html" method="get">	 
+<form action="../ru/567445483875-delete.html" method="get">	 
 
 
 		 
