--- a/568992233768.html
+++ b/568992233768.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/568992233768-delete.html" method="get">	 
+<form action="../ru/568992233768-delete.html" method="get">	 
 
 
 		 
