--- a/569874300172.html
+++ b/569874300172.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/569874300172-delete.html" method="get">	 
+<form action="../ru/569874300172-delete.html" method="get">	 
 
 
 		 
