--- a/570876176630.html
+++ b/570876176630.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/570876176630-delete.html" method="get">	 
+<form action="../ru/570876176630-delete.html" method="get">	 
 
 
 		 
