--- a/571007238862.html
+++ b/571007238862.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571007238862-delete.html" method="get">	 
+<form action="../ru/571007238862-delete.html" method="get">	 
 
 
 		 
