--- a/571385489464.html
+++ b/571385489464.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571385489464-delete.html" method="get">	 
+<form action="../ru/571385489464-delete.html" method="get">	 
 
 
 		 
