--- a/571900282219.html
+++ b/571900282219.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571900282219-delete.html" method="get">	 
+<form action="../ru/571900282219-delete.html" method="get">	 
 
 
 		 
