--- a/571962833164.html
+++ b/571962833164.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571962833164-delete.html" method="get">	 
+<form action="../ru/571962833164-delete.html" method="get">	 
 
 
 		 
