--- a/571988226431.html
+++ b/571988226431.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571988226431-delete.html" method="get">	 
+<form action="../ru/571988226431-delete.html" method="get">	 
 
 
 		 
