--- a/572111978062.html
+++ b/572111978062.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/572111978062-delete.html" method="get">	 
+<form action="../ru/572111978062-delete.html" method="get">	 
 
 
 		 
