--- a/573867999148.html
+++ b/573867999148.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/573867999148-delete.html" method="get">	 
+<form action="../ru/573867999148-delete.html" method="get">	 
 
 
 		 
