--- a/574647931538.html
+++ b/574647931538.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/574647931538-delete.html" method="get">	 
+<form action="../ru/574647931538-delete.html" method="get">	 
 
 
 		 
