--- a/575621658503.html
+++ b/575621658503.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/575621658503-delete.html" method="get">	 
+<form action="../ru/575621658503-delete.html" method="get">	 
 
 
 		 
