--- a/575987206358.html
+++ b/575987206358.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/575987206358-delete.html" method="get">	 
+<form action="../ru/575987206358-delete.html" method="get">	 
 
 
 		 
