--- a/576496753357.html
+++ b/576496753357.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/576496753357-delete.html" method="get">	 
+<form action="../ru/576496753357-delete.html" method="get">	 
 
 
 		 
