--- a/578414872872.html
+++ b/578414872872.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/578414872872-delete.html" method="get">	 
+<form action="../ru/578414872872-delete.html" method="get">	 
 
 
 		 
