--- a/582759784916.html
+++ b/582759784916.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/582759784916-delete.html" method="get">	 
+<form action="../ru/582759784916-delete.html" method="get">	 
 
 
 		 
