--- a/583602371742.html
+++ b/583602371742.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/583602371742-delete.html" method="get">	 
+<form action="../ru/583602371742-delete.html" method="get">	 
 
 
 		 
