--- a/583663663576.html
+++ b/583663663576.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/583663663576-delete.html" method="get">	 
+<form action="../ru/583663663576-delete.html" method="get">	 
 
 
 		 
