--- a/568053139044.html
+++ b/568053139044.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/568053139044-delete.html" method="get">	 
+<form action="../ru/568053139044-delete.html" method="get">	 
 
 
 		 
