--- a/569323066056.html
+++ b/569323066056.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/569323066056-delete.html" method="get">	 
+<form action="../ru/569323066056-delete.html" method="get">	 
 
 
 		 
