--- a/569442895827.html
+++ b/569442895827.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/569442895827-delete.html" method="get">	 
+<form action="../ru/569442895827-delete.html" method="get">	 
 
 
 		 
