--- a/570444159142.html
+++ b/570444159142.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/570444159142-delete.html" method="get">	 
+<form action="../ru/570444159142-delete.html" method="get">	 
 
 
 		 
