--- a/571087220417.html
+++ b/571087220417.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571087220417-delete.html" method="get">	 
+<form action="../ru/571087220417-delete.html" method="get">	 
 
 
 		 
