--- a/571443933490.html
+++ b/571443933490.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571443933490-delete.html" method="get">	 
+<form action="../ru/571443933490-delete.html" method="get">	 
 
 
 		 
