--- a/571545040645.html
+++ b/571545040645.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/571545040645-delete.html" method="get">	 
+<form action="../ru/571545040645-delete.html" method="get">	 
 
 
 		 
