--- a/572214940882.html
+++ b/572214940882.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/572214940882-delete.html" method="get">	 
+<form action="../ru/572214940882-delete.html" method="get">	 
 
 
 		 
