--- a/572415839692.html
+++ b/572415839692.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/572415839692-delete.html" method="get">	 
+<form action="../ru/572415839692-delete.html" method="get">	 
 
 
 		 
