--- a/572576598623.html
+++ b/572576598623.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/572576598623-delete.html" method="get">	 
+<form action="../ru/572576598623-delete.html" method="get">	 
 
 
 		 
