--- a/573600846035.html
+++ b/573600846035.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/573600846035-delete.html" method="get">	 
+<form action="../ru/573600846035-delete.html" method="get">	 
 
 
 		 
