--- a/577230371670.html
+++ b/577230371670.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/577230371670-delete.html" method="get">	 
+<form action="../ru/577230371670-delete.html" method="get">	 
 
 
 		 
