--- a/577639905741.html
+++ b/577639905741.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/577639905741-delete.html" method="get">	 
+<form action="../ru/577639905741-delete.html" method="get">	 
 
 
 		 
