--- a/578589011641.html
+++ b/578589011641.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/578589011641-delete.html" method="get">	 
+<form action="../ru/578589011641-delete.html" method="get">	 
 
 
 		 
