--- a/578857183919.html
+++ b/578857183919.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/578857183919-delete.html" method="get">	 
+<form action="../ru/578857183919-delete.html" method="get">	 
 
 
 		 
