--- a/579871265588.html
+++ b/579871265588.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/579871265588-delete.html" method="get">	 
+<form action="../ru/579871265588-delete.html" method="get">	 
 
 
 		 
