--- a/580841620140.html
+++ b/580841620140.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/580841620140-delete.html" method="get">	 
+<form action="../ru/580841620140-delete.html" method="get">	 
 
 
 		 
