--- a/581944307114.html
+++ b/581944307114.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/178138285923-delete.html" method="get">	 
+<form action="../ru/178138285923-delete.html" method="get">	 
 
 
 		 
