--- a/582749256491.html
+++ b/582749256491.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/582749256491-delete.html" method="get">	 
+<form action="../ru/582749256491-delete.html" method="get">	 
 
 
 		 
