--- a/583905783049.html
+++ b/583905783049.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/583905783049-delete.html" method="get">	 
+<form action="../ru/583905783049-delete.html" method="get">	 
 
 
 		 
