--- a/584030697780.html
+++ b/584030697780.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/584030697780-delete.html" method="get">	 
+<form action="../ru/584030697780-delete.html" method="get">	 
 
 
 		 
