--- a/585060734353.html
+++ b/585060734353.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/585060734353-delete.html" method="get">	 
+<form action="../ru/585060734353-delete.html" method="get">	 
 
 
 		 
