--- a/587499624236.html
+++ b/587499624236.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/587499624236-delete.html" method="get">	 
+<form action="../ru/587499624236-delete.html" method="get">	 
 
 
 		 
