--- a/588006516287.html
+++ b/588006516287.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/588006516287-delete.html" method="get">	 
+<form action="../ru/588006516287-delete.html" method="get">	 
 
 
 		 
