--- a/588371680312.html
+++ b/588371680312.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/588371680312-delete.html" method="get">	 
+<form action="../ru/588371680312-delete.html" method="get">	 
 
 
 		 
