--- a/588808838181.html
+++ b/588808838181.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/588808838181-delete.html" method="get">	 
+<form action="../ru/588808838181-delete.html" method="get">	 
 
 
 		 
