--- a/588826681261.html
+++ b/588826681261.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/588826681261-delete.html" method="get">	 
+<form action="../ru/588826681261-delete.html" method="get">	 
 
 
 		 
