--- a/591612188960.html
+++ b/591612188960.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/591612188960-delete.html" method="get">	 
+<form action="../ru/591612188960-delete.html" method="get">	 
 
 
 		 
