--- a/591945690401.html
+++ b/591945690401.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/591945690401-delete.html" method="get">	 
+<form action="../ru/591945690401-delete.html" method="get">	 
 
 
 		 
