--- a/592890042411.html
+++ b/592890042411.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/592890042411-delete.html" method="get">	 
+<form action="../ru/592890042411-delete.html" method="get">	 
 
 
 		 
