--- a/592909578256.html
+++ b/592909578256.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/592909578256-delete.html" method="get">	 
+<form action="../ru/592909578256-delete.html" method="get">	 
 
 
 		 
