--- a/594722326032.html
+++ b/594722326032.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/594722326032-delete.html" method="get">	 
+<form action="../ru/594722326032-delete.html" method="get">	 
 
 
 		 
