--- a/595456576560.html
+++ b/595456576560.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/595456576560-delete.html" method="get">	 
+<form action="../ru/595456576560-delete.html" method="get">	 
 
 
 		 
