--- a/596463221288.html
+++ b/596463221288.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/596463221288-delete.html" method="get">	 
+<form action="../ru/596463221288-delete.html" method="get">	 
 
 
 		 
