--- a/599754132772.html
+++ b/599754132772.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/599754132772-delete.html" method="get">	 
+<form action="../ru/599754132772-delete.html" method="get">	 
 
 
 		 
