--- a/584110255764.html
+++ b/584110255764.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/584110255764-delete.html" method="get">	 
+<form action="../ru/584110255764-delete.html" method="get">	 
 
 
 		 
