--- a/585140279733.html
+++ b/585140279733.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/585140279733-delete.html" method="get">	 
+<form action="../ru/585140279733-delete.html" method="get">	 
 
 
 		 
