--- a/585453742597.html
+++ b/585453742597.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/585453742597-delete.html" method="get">	 
+<form action="../ru/585453742597-delete.html" method="get">	 
 
 
 		 
