--- a/585671036601.html
+++ b/585671036601.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/585671036601-delete.html" method="get">	 
+<form action="../ru/585671036601-delete.html" method="get">	 
 
 
 		 
