--- a/586230109124.html
+++ b/586230109124.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/586230109124-delete.html" method="get">	 
+<form action="../ru/586230109124-delete.html" method="get">	 
 
 
 		 
