--- a/586286438351.html
+++ b/586286438351.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/586286438351-delete.html" method="get">	 
+<form action="../ru/586286438351-delete.html" method="get">	 
 
 
 		 
