--- a/587422974484.html
+++ b/587422974484.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/587422974484-delete.html" method="get">	 
+<form action="../ru/587422974484-delete.html" method="get">	 
 
 
 		 
