--- a/589282698554.html
+++ b/589282698554.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/589282698554-delete.html" method="get">	 
+<form action="../ru/589282698554-delete.html" method="get">	 
 
 
 		 
