--- a/589684009276.html
+++ b/589684009276.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/589684009276-delete.html" method="get">	 
+<form action="../ru/589684009276-delete.html" method="get">	 
 
 
 		 
