--- a/591097957416.html
+++ b/591097957416.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/591097957416-delete.html" method="get">	 
+<form action="../ru/591097957416-delete.html" method="get">	 
 
 
 		 
