--- a/600092140591.html
+++ b/600092140591.html
@@ -280,7 +280,7 @@
 		
 
 
-<form action="../com/600092140591-delete.html" method="get">	 
+<form action="../ru/600092140591-delete.html" method="get">	 
 
 
 		 
