--- a/448254487247.html
+++ b/448254487247.html
@@ -340,6 +340,22 @@
 
 <script> var name_448254487247 = "Ольга"; document.getElementById("name_448254487247").innerHTML = name_448254487247; var age_448254487247 = "Возраст: 27"; document.getElementById("age_448254487247").innerHTML = age_448254487247; var city_448254487247 = "Город: Тамбов"; document.getElementById("city_448254487247").innerHTML = city_448254487247;</script>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(97462274, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/97462274" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 </body></html>
