--- a/517939176368-delete.html
+++ b/517939176368-delete.html
@@ -328,6 +328,22 @@
 
 <script> var name_517939176368 = "Марина"; document.getElementById("name_517939176368").innerHTML = name_517939176368; var age_517939176368 = "Возраст: 32"; document.getElementById("age_517939176368").innerHTML = age_517939176368; var city_517939176368 = "Город: Воронеж"; document.getElementById("city_517939176368").innerHTML = city_517939176368;</script>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(97462274, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/97462274" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 </body></html>
