--- a/539489904525-delete.html
+++ b/539489904525-delete.html
@@ -328,6 +328,22 @@
 
 <script> var name_539489904525 = "Марина"; document.getElementById("name_539489904525").innerHTML = name_539489904525; var age_539489904525 = "Возраст: 28"; document.getElementById("age_539489904525").innerHTML = age_539489904525; var city_539489904525 = "Город: Воронеж"; document.getElementById("city_539489904525").innerHTML = city_539489904525;</script>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(97462274, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/97462274" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 </body></html>
