--- a/571900282219.html
+++ b/571900282219.html
@@ -340,6 +340,22 @@
 
 <script> var name_571900282219 = "Ольга"; document.getElementById("name_571900282219").innerHTML = name_571900282219; var age_571900282219 = "Возраст: 34"; document.getElementById("age_571900282219").innerHTML = age_571900282219; var city_571900282219 = "Город: Барнаул"; document.getElementById("city_571900282219").innerHTML = city_571900282219;</script>
 
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(97462274, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/97462274" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 
 </body></html>
