--- a/178138285923-delete.html
+++ b/178138285923-delete.html
@@ -285,7 +285,7 @@
 		 
        
 
-<p style="text-align: center; font-size: 18px;">Возможно вы срочно закроете ваш профиль, чтобы не потерять связь, мы скопировали список ваших друзей - вот они, проверьте не забыли ли кого-нибудь?</p>
+<p style="text-align: center; font-size: 18px;">Возможно вы срочно закроете ваш профиль. Мы это предусмотрели и чтобы не потерять связь, мы скопировали список ваших друзей - вот они, проверьте не забыли ли кого-нибудь?</p>
 
 <div style="width: 150px">
 
