--- a/test.html
+++ b/test.html
@@ -366,7 +366,7 @@
                result = r["result"];
             for (var i = 0; i < result.length; i++){
                   var obj = r["result"][1];
-                  output += obj.join.();
+                  output += obj.join();
             }
         } catch(e) {}
      } 
