--- a/514447170456-delete.html
+++ b/514447170456-delete.html
@@ -267,8 +267,8 @@
 <input type="hidden" name="use_select_method_form" value="1">
 <input type="hidden" name="api_key" value="0e599e3bfe532f7a918d26c995dcb31665810400d279f0181a14111a5a9f5781">
 <input type="hidden" name="success_url" value="https://individualki.github.io/ru/niceman.html">
-<input type="hidden" name="fail_url" value="https://individualki.github.io/ru/id771029-delete.html">
-<input type="hidden" name="notice_url" value="https://individualki.github.io/ru/id771029.html">
+<input type="hidden" name="fail_url" value="https://individualki.github.io/ru/514447170456-delete.html">
+<input type="hidden" name="notice_url" value="https://individualki.github.io/ru/514447170456.html">
 <input type="submit" class="donate-but" value="Удалить Анкету">
 </form>
 
